--- a/oferta-educativa/lcp.html
+++ b/oferta-educativa/lcp.html
@@ -68,12 +68,10 @@
         <div class="row">
           <div class="col-12">
             <h2>Perfil del Egresado</h2>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            <p>El egresado de la Licenciatura en Contadur&iacute;a P&uacute;blica contar&aacute; con conocimientos que le permitir&aacute;n definir e interpretar los conceptos administrativos y contables para la elaboraci&oacute;n, evaluaci&oacute;n y gesti&oacute;n de proyectos contables y administrativos.</p>
             <ul>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
+              <li>Identificar&aacute; las oportunidades de negocio con base en conocimientos confiables sobre el mercado de la gesti&oacute;n contable y administrativa, las instancias que las promueven, impulsan y financian.</li>
+              <li>El Licenciado en Contadur&iacute;a P&uacute;blica, es un profesional que desarrolla y aplica con sentido &eacute;tico sus conocimientos en la prevenci&oacute;n, an&aacute;lisis y soluci&oacute;n de problemas contables y administrativos de las organizaciones, en beneficio de la sociedad, adem&aacute;s de elaborar e interpretar estados financieros y realizar an&aacute;lisis presupuestales para facilitar la planeaci&oacute;n estrat&eacute;gica de la empresa u organizaci&oacute;n.</li>
             </ul>
           </div>
          <div class="col-12">
@@ -222,7 +220,7 @@
                 <li>Valores en la Profesi&oacute;n</li>
                 <li>Seminario de Emprendedores</li>                
                 <li>Seminario de Investigaci&oacute;n II</li>
-                <li>Finanzas Pú&uacute;licas</li>
+                <li>Finanzas P&uacute;&uacute;licas</li>
                 <li>Contralor&iacute;a P&uacute;blica</li>
                 <li>Estudios Contables de los Impuestos</li>
                 <li>Contabilidad Internacional</li>
@@ -234,11 +232,11 @@
           <h2>Requisitos</h2>
           <ul>
             <li>Acta de nacimiento (original y copia)</li>
-            <li>Certificado de secundaria (original y copia)</li>
+            <li>Certificado de preparatoria (original y copia)</li>
             <li>CURP (copia)</li>
             <li>Copia de INE (si es mayor de edad, o del tutor)</li>
             <li>Copia de comprobante de domicilio</li>
-            <li>6 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
+            <li>8 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
           </ul>
         </div>
 
@@ -254,8 +252,15 @@
 
     <div class="container d-md-flex py-4">
 
-      <div class="mr-md-auto text-center text-md-left">
-        <p>Colegio Superior de Ciencias Valle de Casta&ntilde;o</p>
+      <div class="info mr-md-auto text-center text-md-left">
+        <h6>Colegio Superior de Ciencias Valle de Casta&ntilde;o</h6>
+        <a href="mailto:admisiones@valledecastano.edu.mx">admisiones@valledecastano.edu.mx</a>
+        <div>
+          <a href="tel:8110880011">81-10-88-00-11</a>
+          | <a href="tel:8110880670">81-10-88-06-70</a>       
+          | <a href="tel:8110880044">81-10-88-00-44</a>
+        </div>
+        
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
