--- a/oferta-educativa/mpe.html
+++ b/oferta-educativa/mpe.html
@@ -67,12 +67,10 @@
         <div class="row">
           <div class="col-12">
             <h2>Perfil del Egresado</h2>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
             <ul>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
+              <li>Promover y participar en la organizaci&oacute;n, planificaci&oacute;n, desarrollo y evoluci&oacute;n de los procesos de orientaci&oacute;n y asesoramiento profesional y vocacional frente a las distintas posibilidades educativas o profesionales.</li>
+              <li>Desempeñarse en la investigaci&oacute;n en las actividades de an&aacute;lisis y reflexi&oacute;n sobre el propio trabajo, la mejora y actualizaci&oacute;n de su competencia t&eacute;cnica, la profundizaci&oacute;n y extensi&oacute;n de la teor&iacute;a y los procedimientos propios de la psicolog&iacute;a educativa.</li>
+              <li>Intervenir en las relaciones entre actividades educativas y la comunidad donde tiene lugar, as&iacute; como en los factores sociales y culturales que condicionan las capacidades educativas, entre otras. </li>
             </ul>
           </div>
          <div class="col-12">
@@ -154,11 +152,14 @@
           <h2>Requisitos</h2>
           <ul>
             <li>Acta de nacimiento (original y copia)</li>
-            <li>Certificado de secundaria (original y copia)</li>
+            <li>Certificado de licenciatura (original y copia)</li>
+            <li>T&iacute;tulo de Licenciatura (original y copia)</li>
+            <li>Carta Motivos (Motivos para estudiar la Maestr&iacute;a)</li>
+            <li>Curr&iacute;culum</li>
             <li>CURP (copia)</li>
-            <li>Copia de INE (si es mayor de edad, o del tutor)</li>
+            <li>Copia de INE</li>
             <li>Copia de comprobante de domicilio</li>
-            <li>6 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
+            <li>8 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
           </ul>
         </div>
 
@@ -174,8 +175,15 @@
 
     <div class="container d-md-flex py-4">
 
-      <div class="mr-md-auto text-center text-md-left">
-        <p>Colegio Superior de Ciencias Valle de Casta&ntilde;o</p>
+      <div class="info mr-md-auto text-center text-md-left">
+        <h6>Colegio Superior de Ciencias Valle de Casta&ntilde;o</h6>
+        <a href="mailto:admisiones@valledecastano.edu.mx">admisiones@valledecastano.edu.mx</a>
+        <div>
+          <a href="tel:8110880011">81-10-88-00-11</a>
+          | <a href="tel:8110880670">81-10-88-06-70</a>       
+          | <a href="tel:8110880044">81-10-88-00-44</a>
+        </div>
+        
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
