--- a/oferta-educativa/preparatoria.html
+++ b/oferta-educativa/preparatoria.html
@@ -68,12 +68,10 @@
         <div class="row">
           <div class="col-12">
             <h2>Perfil del Egresado</h2>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            <p>Las competencias que definen el perfil de egreso se agrupan en cinco grandes campos: habilidades intelectuales espec&iacute;ficas, dominio de los prop&oacute;sitos y los contenidos de la educaci&oacute;n b&aacute;sica, competencias did&aacute;cticas, identidad profesional y &eacute;tica, y capacidad de percepci&oacute;n y respuesta a las condiciones sociales del entorno de la escuela.</p>
             <ul>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
+              <li>El alumno desarrollar&aacute; procesos l&oacute;gicos que le permitan analizar y explicar diversos fen&oacute;menos naturales y sociales del medio circundante, desde dimensiones y perspectivas te&oacute;ricas.</li>
+              <li>Aplicar&aacute; en su vida cotidiana los conocimientos de diferentes disciplinas y ciencias en la resoluci&oacute;n de problemas, con base en principios, leyes y conceptos.</li>
             </ul>
           </div>
          <div class="col-12">
@@ -86,8 +84,8 @@
           <div id="collapse1" class="collapse">
             <ul >
               <li>Matem&aacute;ticas I</li>
-              <li>Química I</li>
-              <li>Ética y Valores I</li>
+              <li>Qu&iacute;mica I</li>
+              <li>&Eacute;tica y Valores I</li>
               <li>Introducci&oacute;n a las Ciencias Sociales</li>
               <li>Taller de Lectura y Redacci&oacute;n I</li>
               <li>Lengua Adicional al Espa&ntilde;ol I</li>
@@ -103,7 +101,7 @@
           <div id="collapse2" class="collapse">
             <ul>
               <li>Matem&aacute;ticas II</li>
-              <li>Química II</li>
+              <li>Qu&iacute;mica II</li>
               <li>Ética y Valores II</li>
               <li>Historia de M&eacute;xico I</li>
               <li>Taller de Lectura y Redacci&oacute;n II</li>
@@ -210,8 +208,15 @@
 
     <div class="container d-md-flex py-4">
 
-      <div class="mr-md-auto text-center text-md-left">
-        <p>Colegio Superior de Ciencias Valle de Casta&ntilde;o</p>
+      <div class="info mr-md-auto text-center text-md-left">
+        <h6>Colegio Superior de Ciencias Valle de Casta&ntilde;o</h6>
+        <a href="mailto:admisiones@valledecastano.edu.mx">admisiones@valledecastano.edu.mx</a>
+        <div>
+          <a href="tel:8110880011">81-10-88-00-11</a>
+          | <a href="tel:8110880670">81-10-88-06-70</a>       
+          | <a href="tel:8110880044">81-10-88-00-44</a>
+        </div>
+        
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
