--- a/oferta-educativa/derecho.html
+++ b/oferta-educativa/derecho.html
@@ -68,12 +68,12 @@
         <div class="row">
           <div class="col-12">
             <h2>Perfil del Egresado</h2>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            <p>El egresado de la Licenciatura en Derecho, contar&aacute; con conocimientos, habilidades, aptitudes, competencias y valores que le permitir&aacute;n definir e interpretar los conceptos jur&iacute;dicos necesarios para la elaboraci&oacute;n, evaluaci&oacute;n y gesti&oacute;n de acciones legales, tener dominio sobre sistemas jur&iacute;dicos e impartici&oacute;n de justicia.</p>
             <ul>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
+              <li>Conocer&aacute; el marco jur&iacute;dico y realizar&aacute; labores de consultor&iacute;a.</li>
+              <li>Al terminar sus estudios los egresados serán capaces de ejercer su labor con profesionalismo, &eacute;tica y responsabilidad.</li>
+              <li>Aplicar&aacute; la teor&iacute;a del Derecho y las bases jur&iacute;dicas que la sustentan, as&iacute; como elaborar e interpretar demandas y entablar juicios laborales, penales y civiles.</li>
+              <li>El Licenciado en Derecho, es un profesional que desarrolla y aplica con sentido &eacute;tico sus conocimientos en la prevenci&oacute;n, an&aacute;lisis y soluci&oacute;n de problemas jurdicos de las organizaciones, en beneficio de la sociedad.</li>
             </ul>
           </div>
          <div class="col-12">
@@ -236,11 +236,11 @@
           <h2>Requisitos</h2>
           <ul>
             <li>Acta de nacimiento (original y copia)</li>
-            <li>Certificado de secundaria (original y copia)</li>
+            <li>Certificado de preparatoria (original y copia)</li>
             <li>CURP (copia)</li>
             <li>Copia de INE (si es mayor de edad, o del tutor)</li>
             <li>Copia de comprobante de domicilio</li>
-            <li>6 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
+            <li>8 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
           </ul>
         </div>
 
@@ -256,8 +256,15 @@
 
     <div class="container d-md-flex py-4">
 
-      <div class="mr-md-auto text-center text-md-left">
-        <p>Colegio Superior de Ciencias Valle de Casta&ntilde;o</p>
+      <div class="info mr-md-auto text-center text-md-left">
+        <h6>Colegio Superior de Ciencias Valle de Casta&ntilde;o</h6>
+        <a href="mailto:admisiones@valledecastano.edu.mx">admisiones@valledecastano.edu.mx</a>
+        <div>
+          <a href="tel:8110880011">81-10-88-00-11</a>
+          | <a href="tel:8110880670">81-10-88-06-70</a>       
+          | <a href="tel:8110880044">81-10-88-00-44</a>
+        </div>
+        
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
