--- a/oferta-educativa/lae.html
+++ b/oferta-educativa/lae.html
@@ -68,12 +68,11 @@
         <div class="row">
           <div class="col-12">
             <h2>Perfil del Egresado</h2>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            <p>El egresado de la Licenciatura en Administraci&oacute;n de Empresas contar&aacute; con los conocimientos que le permitan definir e interpretar los conceptos administrativos y contables necesarios para la elaboraci&oacute;n, evaluaci&oacute;n y gesti&oacute;n de proyectos.</p>
             <ul>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
+              <li>Identificar&aacute; las oportunidades de negocio con base en conocimientos sobre el mercado de la gesti&oacute;n administrativa y tendr&aacute; dominio en sistemas de innovaci&oacute;n.</li>
+              <li>Realizar&aacute; labores de consultor&iacute;a en el &aacute;mbito de la administraci&oacute;n y contabilidad y elaborar&aacute; e interpretar&aacute; estados financieros.</li>
+              <li>El Licenciado en Administraci&oacute;n de Empresas es un profesional que desarrolla y aplica con sentido &eacute;tico sus conocimientos en prevenci&oacute;n, an&aacute;lisis y soluci&oacute;n de problemas administrativos y contables de las organizaciones, en beneficio de la sociedad.</li>
             </ul>
           </div>
          <div class="col-12">
@@ -169,7 +168,7 @@
               <li>Finanzas Nacionales</li>
               <li>Pol&iacute;ticas Arancelarias</li>
               <li>Relaciones Empresariales</li>
-              <li>Investigación de Mercados</li>
+              <li>Investigaci&oacute;n de Mercados</li>
               <li>Derecho Fiscal</li>
             </ul>
           </div>
@@ -181,7 +180,7 @@
             <div id="collapse7" class="collapse">
               <ul>
                 <li>Finanzas Internacionales</li>
-                <li>Administración de Empresas</li>
+                <li>Administraci&oacute;n de Empresas</li>
                 <li>Microempresas</li>
                 <li>Perspectiva Human&iacute;stica</li>
                 <li>Desarrollo de Proyectos</li>
@@ -226,11 +225,11 @@
           <h2>Requisitos</h2>
           <ul>
             <li>Acta de nacimiento (original y copia)</li>
-            <li>Certificado de secundaria (original y copia)</li>
+            <li>Certificado de preparatoria (original y copia)</li>
             <li>CURP (copia)</li>
             <li>Copia de INE (si es mayor de edad, o del tutor)</li>
             <li>Copia de comprobante de domicilio</li>
-            <li>6 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
+            <li>8 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
           </ul>
         </div>
 
@@ -246,8 +245,15 @@
 
     <div class="container d-md-flex py-4">
 
-      <div class="mr-md-auto text-center text-md-left">
-        <p>Colegio Superior de Ciencias Valle de Casta&ntilde;o</p>
+      <div class="info mr-md-auto text-center text-md-left">
+        <h6>Colegio Superior de Ciencias Valle de Casta&ntilde;o</h6>
+        <a href="mailto:admisiones@valledecastano.edu.mx">admisiones@valledecastano.edu.mx</a>
+        <div>
+          <a href="tel:8110880011">81-10-88-00-11</a>
+          | <a href="tel:8110880670">81-10-88-06-70</a>       
+          | <a href="tel:8110880044">81-10-88-00-44</a>
+        </div>
+        
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
