--- a/oferta-educativa/lati.html
+++ b/oferta-educativa/lati.html
@@ -68,12 +68,10 @@
         <div class="row">
           <div class="col-12">
             <h2>Perfil del Egresado</h2>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            <p>El egresado de la Licenciatura en Administraci&oacute;n de Tecnolog&iacute;as de la Informaci&oacute;n contar&aacute; con conocimientos, aptitudes, habilidades, competencias y valores que le permitir&aacute;n definir e interpretar los conceptos administrativos b&aacute;sicos y pertinentes para la elaboraci&oacute;n, evaluaci&oacute;n y gesti&oacute;n de proyectos de tecnolog&iacute;a.</p>
             <ul>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
-              <li>Excepteur sint occaecat cupidatat non proident.</li>
+              <li>Los egresados identificar&aacute;n las oportunidades de negocio con base en conocimientos confiables sobre el mercado de la gesti&oacute;n tecnol&oacute;gica y tendr&aacute; dominio sobre sistemas de innovaci&oacute;n.</li>
+              <li>El Licenciado en Administraci&oacute;n de Tecnolog&iacute;as de la Informaci&oacute;n, es un profesional que desarrolla y aplica con sentido &eacute;tico las tecnolog&iacute;as de la informaci&oacute;n en la prevenci&oacute;n, an&aacute;lisis y soluci&oacute;n de problemas inform&aacute;ticos de las organizaciones, en beneficio de la sociedad.</li>
             </ul>
           </div>
          <div class="col-12">
@@ -236,11 +234,11 @@
           <h2>Requisitos</h2>
           <ul>
             <li>Acta de nacimiento (original y copia)</li>
-            <li>Certificado de secundaria (original y copia)</li>
+            <li>Certificado de preparatoria (original y copia)</li>
             <li>CURP (copia)</li>
             <li>Copia de INE (si es mayor de edad, o del tutor)</li>
             <li>Copia de comprobante de domicilio</li>
-            <li>6 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
+            <li>8 fotograf&iacute;as blanco y negro tama&ntilde;o credencial en papel mate (4.5 x 3.5 cm)<br/><strong>NOTA: No se aceptan fotograf&iacute;as instant&aacute;neas. </strong></li>
           </ul>
         </div>
 
@@ -256,8 +254,15 @@
 
     <div class="container d-md-flex py-4">
 
-      <div class="mr-md-auto text-center text-md-left">
-        <p>Colegio Superior de Ciencias Valle de Casta&ntilde;o</p>
+      <div class="info mr-md-auto text-center text-md-left">
+        <h6>Colegio Superior de Ciencias Valle de Casta&ntilde;o</h6>
+        <a href="mailto:admisiones@valledecastano.edu.mx">admisiones@valledecastano.edu.mx</a>
+        <div>
+          <a href="tel:8110880011">81-10-88-00-11</a>
+          | <a href="tel:8110880670">81-10-88-06-70</a>       
+          | <a href="tel:8110880044">81-10-88-00-44</a>
+        </div>
+        
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
